[package]
name = "ubid"
version = "0.1.3"
description = "Fixed-width random identifiers with Crockford base32 encoding."
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/s2-streamstore/ubid"

[features]
default = []
bytes = ["dep:bytes"]
proptest = ["dep:proptest"]
serde = ["dep:serde"]

[dependencies]
bytes = { version = "1", optional = true }
fast32 = "1"
proptest = { version = "1", optional = true }
rand = "0.10"
serde = { version = "1", optional = true }

[dev-dependencies]
bytes = "1"
proptest = "1"
serde_json = "1"
